--- a/member login/html/admin.css
+++ b/member login/html/admin.css
@@ -1,3 +1,19 @@
+
+@media screen and(min-width:300px) and (max-width:600px){
+    .lapvisible {
+        display:none;
+        visibility: hidden;
+        opacity: 0;
+    }
+    .fline{
+        display: none;
+        visibility: hidden;
+    }
+}
+
+
+
+
 table{
     text-align: center;
 }
@@ -30,3 +46,10 @@ h1{
 a:hover{
     background-color: aqua;
 }
+.fline{
+    display: flex;
+    float: left;
+}
+
+
+
