--- a/css/style.css
+++ b/css/style.css
@@ -8642,7 +8642,7 @@ textarea.form-control {
     background: #F71031; }
 
 .ftco-book .appointment-form {
-  padding: 35px;
+  padding: 25px 30px 0px 30px;
   width: 100%;
   background: #fff;
   border-radius: 5px;
@@ -8651,7 +8651,8 @@ textarea.form-control {
   box-shadow: 0px 15px 34px -29px rgba(0, 0, 0, 0.54); }
   @media (min-width: 992px) {
     .ftco-book .appointment-form {
-      margin-top: -650px; } }
+      margin-top: -630px;
+     } }
   .ftco-book .appointment-form .form-group {
     position: relative;
     width: 100%;
