--- a/status.css
+++ b/status.css
@@ -1,6 +1,9 @@
 .center{
     text-align: center;
 }
+.button{
+    margin-bottom: 200px;
+}
 @media only screen and (max-width: 768px) {
 
     .center{
@@ -22,7 +25,9 @@
 
 }
 
-
+footer{
+    margin-top: 100px;;
+}
 
 @media only screen and (min-width: 768px) and (max-width: 1680px) {
     
